--- a/addons/monitoring-prometheus-addon/pom.xml
+++ b/addons/monitoring-prometheus-addon/pom.xml
@@ -61,5 +61,32 @@
       <artifactId>mockito-core</artifactId>
       <scope>test</scope>
     </dependency>
+
+
+
+
+
+    <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-arc</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-resteasy</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-resteasy-jackson</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-smallrye-reactive-messaging-kafka</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>io.cloudevents</groupId>
+      <artifactId>cloudevents-api</artifactId>
+      <version>1.2.0</version>
+    </dependency>
   </dependencies>
 </project>
