--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -308,6 +308,28 @@
         <classifier>sources</classifier>
       </dependency>
 
+      <!-- Trusty Services -->
+      <dependency>
+        <groupId>org.kie.kogito</groupId>
+        <artifactId>trusty-service</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.kie.kogito</groupId>
+        <artifactId>trusty-storage-api</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.kie.kogito</groupId>
+        <artifactId>trusty-storage-infinispan</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.kie.kogito</groupId>
+        <artifactId>trusty-storage-mongo</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+
       <!-- Data Index -->
       <dependency>
         <groupId>org.kie.kogito</groupId>
